--- a/package.json
+++ b/package.json
@@ -32,9 +32,11 @@
   "dependencies": {
     "clsx": "^2.1.1",
     "eslint-plugin-tailwindcss": "^3.17.4",
+    "formik": "^2.4.6",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-router-dom": "^7.4.0"
+    "react-router-dom": "^7.4.0",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@types/chrome": "^0.0.270",
