added basic offchain logic to handle create/spoof/import wallet.

--- a/packages/storage/package.json
+++ b/packages/storage/package.json
@@ -21,6 +21,7 @@
     "type-check": "tsc --noEmit"
   },
   "devDependencies": {
-    "@extension/tsconfig": "workspace:*"
+    "@extension/tsconfig": "workspace:*",
+    "@extension/shared": "workspace:*"
   }
 }
