--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -22,5 +22,8 @@
   },
   "devDependencies": {
     "@extension/tsconfig": "workspace:*"
+  },
+  "dependencies": {
+    "@emurgo/cardano-serialization-lib-browser": "^15.0.0"
   }
 }
