--- a/packages/wallet-manager/package.json
+++ b/packages/wallet-manager/package.json
@@ -21,9 +21,11 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
-    "@extension/storage": "workspace:*",
     "@extension/blockchain-provider": "workspace:*",
     "@extension/shared": "workspace:*",
+    "@extension/storage": "workspace:*",
+    "@types/bip39": "^3.0.4",
+    "bip39": "^3.1.0",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
