--- a/package.json
+++ b/package.json
@@ -30,12 +30,16 @@
     "update-version": "bash update_version.sh"
   },
   "dependencies": {
+    "@emurgo/cardano-serialization-lib-browser": "^15.0.0",
+    "bip39": "^3.1.0",
+    "buffer": "^6.0.3",
     "clsx": "^2.1.1",
     "eslint-plugin-tailwindcss": "^3.17.4",
     "formik": "^2.4.6",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-router-dom": "^7.4.0",
+    "vite-plugin-wasm": "^3.5.0",
     "yup": "^1.6.1"
   },
   "devDependencies": {
@@ -65,8 +69,7 @@
     "tslib": "^2.6.3",
     "turbo": "^2.3.3",
     "typescript": "5.5.4",
-    "vite": "5.4.9",
-    "vite-plugin-wasm": "^3.5.0"
+    "vite": "5.4.9"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx,json}": [
