--- a/chrome-extension/package.json
+++ b/chrome-extension/package.json
@@ -16,11 +16,13 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
+    "@emurgo/cardano-serialization-lib-asmjs-gc": "^15.0.0",
     "@emurgo/cardano-serialization-lib-browser": "^15.0.0",
     "@extension/blockchain-provider": "workspace:*",
     "@extension/shared": "workspace:*",
     "@extension/storage": "workspace:*",
-    "bip39": "^3.1.0",
+    "@scure/bip39": "^1.6.0",
+    "buffer": "^6.0.3",
     "webextension-polyfill": "^0.12.0"
   },
   "devDependencies": {
