--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   },
   "dependencies": {
     "@emurgo/cardano-serialization-lib-browser": "^15.0.0",
-    "bip39": "^3.1.0",
+    "@scure/bip39": "^1.6.0",
     "buffer": "^6.0.3",
     "clsx": "^2.1.1",
     "eslint-plugin-tailwindcss": "^3.17.4",
