--- a/pages/popup/package.json
+++ b/pages/popup/package.json
@@ -22,6 +22,7 @@
     "@extension/content-runtime-script": "workspace:*",
     "@extension/shared": "workspace:*",
     "@extension/storage": "workspace:*",
+    "@extension/cardano-provider": "workspace:*",
     "@heroicons/react": "^2.2.0"
   },
   "devDependencies": {
