finished refactor: We now have only one indexeDB to store all data and a localStorage object to store settings and wallet state. We also fixed several bugs and streamlined the syncing. We also refactored the two pacakges blockchain-provider and wallet-manager into one package cardano-provider. This improves maintainability drastically.

--- a/pages/popup/tsconfig.json
+++ b/pages/popup/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "extends": "@extension/tsconfig/base",
   "compilerOptions": {
+    "target": "ES2020",
     "baseUrl": ".",
     "paths": {
       "@src/*": ["src/*"]
